tests/ui/no_crate_type.stderr
error: malformed `crate_type` attribute input
  --> $DIR/no_crate_type.rs:2:1
   |
LL | #![crate_type]
   | ^^^^^^^^^^^^^^ malformed input
help: `crate_type` must specify a value like one of the following:
   |
LL | #![crate_type = "bin"]
   |
LL | #![crate_type = "lib"]
   | 
LL | #![crate_type = "..."]

error: aborting due to 1 previous error